wireshark (2.2.3.appneta.29) UNRELEASED; urgency=medium

  * Fix 'malformed packet' on field length > 128

 -- Fred Klassen <fklassen@appneta.com>  Tue, 24 Jan 2017 10:13:00 -0700

wireshark (2.2.3.appneta.28) UNRELEASED; urgency=medium

  * Pseudo Checksum decode

wireshark (2.2.3.appneta.27) UNRELEASED; urgency=medium

  * new ECB Results decode

 -- Fred Klassen <fklassen@appneta.com>  Thu, 1 Dec 2016 10:42:00 -0700
wireshark (2.2.3.appneta.26) UNRELEASED; urgency=medium

  * fix ECB paylaod decodes

 -- Fred Klassen <fklassen@appneta.com>  Thu, 24 Aug 2016 16:56:00 -0700

wireshark (2.2.3) unstable; urgency=low

  * Self-made package

 -- Wireshark Self-made package <wireshark@example.com>  Wed, 27 Jan 2010 00:00:00 +0000

wireshark (2.2.2.appneta.25) UNRELEASED; urgency=medium

  * updated ECB packet design

 -- Fred Klassen <fklassen@appneta.com>  Mon, 21 Aug 2016 17:56:00 -0700
wireshark (2.2.2.appneta.24) UNRELEASED; urgency=medium

  * merge from wireshark 2.1.1.appneta.23
  * add Enhanced Controlled Burst (ECB)

 -- Fred Klassen <fklassen@appneta.com>  Sat, 19 Aug 2016 18:03:00 -0700

wireshark (2.2.2.appneta.23) UNRELEASED; urgency=medium

  * add Controlled Burst debug bit

 -- Fred Klassen <fklassen@appneta.com>  Tue, 30 Aug 2016 10:02:00 -0700

wireshark (2.2.2.appneta.22) UNRELEASED; urgency=medium

  * change dependencies

 -- Fred Klassen <fklassen@appneta.com>  Mon, 24 Aug 2016 10:27:07 -0700

wireshark (2.2.2.appneta.21) UNRELEASED; urgency=medium

  * add CB inbound updates

 -- Fred Klassen <fklassen@appneta.com>  Mon, 22 Aug 2016 14:20:47 -0700
