@@ -27,7 +27,7 @@ set(PROJECT_MAJOR_VERSION 2)
 set(PROJECT_MINOR_VERSION 2)
 set(PROJECT_PATCH_VERSION 3)
 set(PROJECT_BUILD_VERSION ${GIT_REVISION})
-set(PROJECT_VERSION_EXTENSION "-appneta.29")
+set(PROJECT_VERSION_EXTENSION "-appneta.30")
 
 if(DEFINED ENV{WIRESHARK_VERSION_EXTRA})
 	set(PROJECT_VERSION_EXTENSION "$ENV{WIRESHARK_VERSION_EXTRA}")
